# playnalyze-web-app

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/app/models/: database.py  games.py  items.py
backend/app/routes/: games.py  items.py  routes.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/Dashboard/: View.tsx  View_new.tsx  index.tsx
frontend/src/OutputSearch/: View.tsx  index.tsx
frontend/src/hooks/: useGameSearch.ts
frontend/src/types/: game.ts
